--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 title: CORA LAB # the website title (if blank, full name will be used instead)
 logo: "/assets/img/logo.png"
-first_name: 박
-middle_name: 성
-last_name: 준이올시다.
+first_name: 
+middle_name: CoraLab
+last_name: 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
