chore: 필요없는 파일들 제거

--- a/_config.yml
+++ b/_config.yml
@@ -155,6 +155,8 @@ collections:
     output: true
   people:
     output: true
+  papers:
+    output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
