fix: data 부분 수정

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,7 @@
 header:
   title: "PUBLICATIONS"
   description: "Our latest research publications."
+categories:
+  - "Group Highlight"
+  - "Full of Publication"
+
