chore: 불필요한 템플릿 제거, 더미 데이터 수정

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,6 @@
 hero:
   title: "THE DESIGN RESEARCH COLLECTIVE"
-  background_image: "/assets/img/background.png"
+  background_image: "/assets/img/home/sample_background.png"
   buttons:
     - text: "MEET OUR TEAM"
       link: "/people/"
