--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,9 +1,20 @@
+metadata:
+  title: "PEOPLE"
+  description: "Our team of researchers and students."
+
 header:
   title: "PEOPLE"
   description: "Our team of researchers and students."
 categories:
-  - Professor
-  - Ph.D. Students
-  - M.S. Students
-  - Undergraduate Students
-  - Alumni
+  - key: professor
+    title: "Professor"
+  - key: postdoc
+    title: "Postdoctoral Researchers"
+  - key: phd
+    title: "Ph.D. Students"
+  - key: ms
+    title: "M.S. Students"
+  - key: undergrad
+    title: "Undergraduate Students"
+  - key: alumni
+    title: "Alumni"
