--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,13 @@
+metadata:
+  title: "PUBLICATIONS"
+  description: "Our latest research publications."
+
 header:
   title: "PUBLICATIONS"
   description: "Our latest research publications."
-categories:
-  - "Group Highlight"
-  - "Full of Publication"
+sections:
+  highlight:
+    title: "Group Highlight"
+  full:
+    title: "Full of Publication"
 
