--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,53 +9,46 @@ categories:
   - "Research Projects"
 
 items:
-  - key: autonomous-navigation
-    title: "Autonomous Navigation in Urban Environments"
-    description: "Vision-LiDAR fusion for safe and efficient city driving"
-    img: /assets/img/projects/sample_1.png
+  - key: gpu-robot-path-optimization
+    title: "GPU 가속화를 활용한 자율 로봇의 경로 최적화 및 궤적 추정 기법 연구"
+    description: "Real-time trajectory optimization using GPU acceleration for AMRs"
+    img: /assets/img/projects/project-gpu-robot.png
     importance: 1
     category: "Research Projects"
     related_publications: true
-    url: /projects/project-autonomous-navigation/
-    images:
-      - path: /assets/img/projects/sample_1.png
-        title: "LiDAR Point Cloud Mapping"
-      - path: /assets/img/projects/sample_1.png
-        title: "Camera-based Lane Detection"
-    image_caption: "Left: 3D point cloud map of Seoul street. Right: lane detection overlay using camera and segmentation network."
-    funding: "Ministry of Land, Infrastructure and Transport (2024–2026)"
-    keywords: "Sensor Fusion, LiDAR SLAM, Urban Driving"
+    url: /projects/project-gpu-robot-path-optimization/
+    funding: "25.03.01 ~ 28.02.29"
+    keywords: "GPU Acceleration, Path Planning, Trajectory Estimation, AMR"
 
-  - key: slam-robot
-    title: "Real-Time SLAM for Mobile Robots"
-    description: "Low-latency visual SLAM on embedded platforms"
-    img: /assets/img/projects/sample_2.png
+  - key: safe-hri-learning
+    title: "안전한 인간-로봇 협업을 위한 로봇 학습: 제약 강화학습과 형식 검증을 결합한 통합 프레임워크 연구"
+    description: "Safe reinforcement learning and formal verification for HRI"
+    img: /assets/img/projects/project-hri-learning.png
     importance: 2
     category: "Research Projects"
     related_publications: true
-    url: /projects/project-slam-robot/
-    images:
-      - path: /assets/img/projects/sample_2.png
-        title: "Generated Map"
-      - path: /assets/img/projects/sample_2.png
-        title: "Mobile Robot Platform"
-    funding: "National Research Foundation (NRF)"
-    keywords: "SLAM, Visual-Inertial Odometry, Embedded Robotics"
-    content: "A real-time **Visual-Inertial SLAM** framework optimized for Jetson-based mobile robots. We focus on reducing localization latency and improving drift correction in dynamic environments."
+    url: /projects/project-safe-hri-learning/
+    funding: "25.10.01 ~ 28.09.30"
+    keywords: "HRI, Constrained RL, Formal Verification, Safe AI"
 
-  - key: collaborative-robot
-    title: "Human–Robot Collaboration in Manufacturing"
-    description: "AI-based motion prediction for safe cooperative tasks"
-    img: /assets/img/projects/sample_3.png
+  - key: industrial-robot-vibration
+    title: "고하중 페이로드 산업용 로봇의 잔류 진동 저감 기술 개발"
+    description: "Vibration suppression control for heavy-payload industrial robots"
+    img: /assets/img/projects/project-industrial-vibration.png
     importance: 3
     category: "Research Projects"
     related_publications: true
-    url: /projects/project-collaborative-robot/
-    images:
-      - path: /assets/img/projects/sample_3.png
-        title: "Human Motion Tracking"
-      - path: /assets/img/projects/sample_3.png
-        title: "Safe Co-manipulation"
-    funding: "Samsung Electronics Industry-Academia Program"
-    keywords: "Human-Robot Interaction, Safety, Motion Prediction"
-    content: "This project aims to build an intelligent **collaborative robot (CoBot)** that predicts human motion and plans adaptive trajectories for shared workspaces."
+    url: /projects/project-industrial-vibration/
+    funding: "25.02.01 ~ 25.11.30"
+    keywords: "Industrial Robot, Vibration Control, High Payload, Motion Control"
+
+  - key: ev-smart-charging
+    title: "예측제어 기반 전기차 스마트 충전 플래너"
+    description: "MPC-based smart charging planning for EVs"
+    img: /assets/img/projects/project-ev-charging.png
+    importance: 4
+    category: "Research Projects"
+    related_publications: true
+    url: /projects/project-ev-smart-charging/
+    funding: "23.05.15 ~ 24.06.14"
+    keywords: "EV, Smart Charging, MPC, Energy Management"
