--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,6 +1,6 @@
 metadata:
   title: "PEOPLE"
-  description: "Our team of researchers and students."
+  description: "Our team of professor and students."
 
 header:
   title: "PEOPLE"
